# advent_of_code

./: .gitignore  Cargo.toml
2020/: Cargo.toml
2020/src/: main.rs
2020/src/day_1/: mod.rs
2020/src/day_2/: mod.rs
2020/src/day_3/: tree_row.rs
2020/src/day_4/: part_2.rs  passport.rs
2020/src/day_5/: mod.rs
2024/: Cargo.toml
2024/aoc_2024_01/: Cargo.toml
2024/aoc_2024_01/src/: lib.rs  main.rs
2024/aoc_2024_02/: Cargo.toml
2024/aoc_2024_02/src/: lib.rs  main.rs
2024/aoc_2024_03/: Cargo.toml
2024/aoc_2024_03/src/: lib.rs  main.rs
2024/aoc_2024_04/: Cargo.toml
2024/aoc_2024_04/src/: lib.rs  main.rs
2024/aoc_2024_05/: Cargo.toml
2024/aoc_2024_05/src/: lib.rs
2024/aoc_2024_06/: Cargo.toml
2024/aoc_2024_06/src/: lib.rs
2024/aoc_2024_07/: Cargo.toml
2024/aoc_2024_07/src/: lib.rs
2024/common/: Cargo.toml
2024/common/src/: lib.rs
2025/: .gitignore  Cargo.toml  justfile
2025/aoc_2025_01/: Cargo.toml
2025/aoc_2025_01/benches/: part1.rs  part2.rs
2025/aoc_2025_01/src/: lib.rs  part1.rs  part2.rs
2025/aoc_2025_02/: Cargo.toml
2025/aoc_2025_02/benches/: part1.rs  part2.rs
2025/aoc_2025_02/src/: error.rs  lib.rs  part1.rs  part2.rs
2025/aoc_2025_03/: Cargo.toml
2025/aoc_2025_03/benches/: part1.rs  part2.rs
2025/aoc_2025_03/src/: lib.rs  part1.rs  part2.rs
2025/aoc_2025_04/: Cargo.toml
2025/aoc_2025_04/benches/: part1.rs  part2.rs
2025/aoc_2025_04/src/: lib.rs  part1.rs  part2.rs
2025/aoc_2025_05/: Cargo.toml
2025/aoc_2025_05/benches/: part1.rs  part2.rs
2025/aoc_2025_05/src/: error.rs  part1.rs  part2.rs
2025/template/: Cargo.toml  cargo-generate.toml
2025/template/benches/: part1.rs  part2.rs
2025/template/data/: .gitignore
2025/template/src/: lib.rs  part1.rs  part2.rs
leetcode_practice/: Cargo.toml
leetcode_practice/src/: addtwonumbers.rs  countandsay.rs  lib.rs  lrucache.rs  numberofsubstringscontainingallthreecharacters.rs  palindromepartitioning.rs  q00002_add_two_numbers.rs  q00146_lru_cache.rs  q00328_odd_even_linked_list.rs
leetcode_practice/src/common/: list_node.rs  mod.rs
src/: main.rs
src/day_1/: mod.rs  part_1.rs  part_2.rs
src/day_2/: mod.rs  part_1.rs  part_2.rs
src/day_3/: mod.rs  part_1.rs  part_2.rs
src/day_4/: mod.rs  part_1.rs  part_2.rs
src/day_5/: boarding_pass.rs  part_1.rs  part_2.rs
src/utils/: mod.rs
