[workspace]
members = [
  "aoc_2025_01",
  "aoc_2025_02",
  "aoc_2025_03",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Nyefan <advent_of_code_git@nyefan.org>"]
edition = "2024"
rust-version = "1.92.0"

[workspace.dependencies]
divan = "0.1.21"
itertools = "0.14.0"
nom = "8.0.0"
tracing = { version = "0.1.43", features = ["log-always"] }
tracing-subscriber = "0.3.22"
