[workspace]
members = [
    "aoc_2025_01",
    "aoc_2025_02",
    "aoc_2025_03",
    "aoc_2025_04",
    "aoc_2025_05",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Nyefan <advent_of_code_git@nyefan.org>"]
edition = "2024"
rust-version = "1.92.0"

[workspace.dependencies]
divan = "0.1.21"
itertools = "0.14.0"
nom = "8.0.0"
rstest = "0.26.1"
tracing-subscriber = "0.3.22"

[workspace.dependencies.tracing]
version = "0.1.43"
