[package]
name = "aoc_2025_02"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "aoc_2025_02-part1-benchmark"
path = "benches/part1.rs"
harness = false

[[bench]]
name = "aoc_2025_02-part2-benchmark"
path = "benches/part2.rs"
harness = false
